# p2p-ee-chat

./: .env.example  Cargo.toml  DEVELOPMENT.md  README.md  biome.jsonc  package.json  pnpm-lock.yaml
.github/workflows/: crypto.yaml  lint.yaml
apps/frontend/: package.json  vite.config.ts
apps/frontend/app/: base64.ts  chats.tsx  connect-to-user.client.tsx  crypto.client.ts  entry.server.tsx  p2p.client.tsx  p2p.tsx  test.tsx  wasm.client.ts
apps/frontend/app/components/: chat-link.tsx  chat-view.tsx  chats-sidebar.tsx  your-id.tsx
apps/frontend/app/routes/: _index.tsx  chat.$chatId.tsx
apps/signaling-server/: Cargo.toml
apps/signaling-server/src/: ice.rs  main.rs  ws.rs
docs/: Connection Flow.drawio  System Diagram.drawio
frontend/: package-lock.json
