[package]
name = "signaling-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio-tungstenite = "0.26.2"
dashmap = "6.1.0"
futures-util = "0.3.31"
futures-channel = "0.3.31"
futures = "0.3.31"
rand = "0.9.0"
